--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_STRING=mongodb+srv://samsonisaac172:oca7DeERD0G4bsUO@cluster0.e9mym.mongodb.net
+DB_STRI=mongodb+srv://samsonisaac172:oca7DeERD0G4bsUO@cluster0.e9mym.mongodb.net
 DB_LOCAL=mongodb://127.0.0.1:27017/mobilebank_great
 SECRET_KEY=littlesecret
 MAILJET_APIKEY=22248989af07997b4111289a15b17377
 MAILJET_SECRETKEY=9b88b9fb1c437b7de1cec1a8612ddbfd
+DB_STRING=mongodb+srv://chemobrain857380:chemobrain857380@cluster0.lihexau.mongodb.net/mobilebank_N1
 
